--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="./StyleGuide/styleGuide.html">Style Guide</a></li>
-                    <li><a href="./test.html">Test Page</a></li>
+                    <li><a href="./test.html">Test Page...</a></li>
                 </ul>
             </nav>
         </header>
